# libwebem

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  webem.pc.in  webem.vcxproj  webem.vcxproj.filters
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  pr.yml
docs/: INTEGRATION.md
examples/: CMakeLists.txt
examples/01_simple_http/: CMakeLists.txt  main.cpp
examples/01_simple_http/www/: index.html
examples/02_https/: CMakeLists.txt  generate_certs.sh  main.cpp
examples/02_https/www/: index.html
examples/03_websocket/: CMakeLists.txt  main.cpp
examples/03_websocket/www/: index.html
examples/04_authentication/: CMakeLists.txt  main.cpp
examples/04_authentication/www/: index.html
examples/05_custom_logger/: CMakeLists.txt  main.cpp
examples/05_custom_logger/www/: index.html
include/libwebem/: IWebServerLogger.h  IWebsocketHandler.h  Websockets.h  cWebem.h  connection.h  connection_manager.h  header.h  libwebem.h  reply.h  request.h  request_handler.h  request_parser.h  server.h  server_settings.h  session.h  session_store.h  webem_utils.h  webem_version.h
src/: Base64.cpp  GZipHelper.h  Websockets.cpp  cWebem.cpp  connection.cpp  connection_manager.cpp  fastcgi.cpp  fastcgi.h  mime_types.cpp  mime_types.h  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp  sha1.h  url_encode.cpp  url_encode.h  utf.h  webem_stdafx.cpp  webem_stdafx.h  webem_utils.cpp
tests/: CMakeLists.txt
